# av-org

./: .gitignore  README.md
backend/: .env  Cargo.toml  db.sqlite
backend/src/: cors.rs  db.rs  main.rs
backend/src/config/: db.rs
backend/src/models/: customer.rs  gear_item.rs  location.rs  mod.rs  room.rs  tag.rs  user.rs
backend/src/routes/: customer.rs  gear_item.rs  location.rs  mod.rs  room.rs  tag.rs  user.rs
backend/src/schema/: mod.rs  user.rs
frontend/: .env  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[id]/: page.tsx
frontend/src/app/[id]/edit/: page.tsx
frontend/src/app/customer-location-updater/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/detailed-add/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/[[...login]]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/signup/[[...signup]]/: page.tsx
frontend/src/components/FormElements/DropdownMenu/: index.tsx
frontend/src/containers/Dashboard/: index.tsx
frontend/src/containers/DetailedAdd/: index.tsx  schema.ts
frontend/src/containers/Edit/: index.tsx  schema.ts
frontend/src/containers/ItemDetail/: index.tsx
frontend/src/containers/Login/: index.tsx  schema.ts
frontend/src/containers/Modals/: index.tsx
frontend/src/containers/Signup/: index.tsx  schema.ts
frontend/src/utils/config/: axios.ts  paths.ts
frontend/src/utils/functions/: EditPageData.ts  exportTable.ts
frontend/src/utils/types/: common.ts
(+44 files in other folders)
