[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
syn = { version = "1.0", features = ["full", "extra-traits", "parsing", "quote"] }
quote = "1.0"
dotenv = "0.15"
clerk = "0.4" 
rocket_cors = "0.6"
